[package]
authors = ["yochidros <yoshiki.myzw@gmail.com>"]
name = "bat-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
console = "0.15.2"
git2 = "0.16.1"
syntect = "5.0.0"
clap = { version = "4.0.2", features = ["wrap_help", "color", "suggestions", "cargo"] }
